request DELETE ok; big request POST ok; directory listing ok;

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,8 @@
 	<h1 id='title'>42 NETWORK</h1>
 	<h2><center><a href="/random.php">Redirection vers du PHP</a></center></h2>
 	<h2><center><a href="/post.php">REQUEST POST</a></center></h2>
+	<h2><center><a href="/upload.php">UPLOAD FILE</a></center></h2>
+	<h2><center><a href="/delete.php">DELETE FILE</a></center></h2>
 	<div id="map"></div>
 
 	<div class="graph">
